# wyoming-qwen-mlx

./: .gitignore  CHANGELOG.md  README.md  docker_run.sh  install.sh  pyproject.toml  test_modes.py
script/: setup
tests/: test_qwen.py
wyoming_piper/: __init__.py  __main__.py  const.py  speakers.json
wyoming_qwen/: __main__.py  const.py  download.py  handler.py
wyoming_qwen/speakers/: clone-voice.json  custom-voice.json  voice-design.json
