[project]
name = "wyoming-qwen"
version = "1.0.0"
description = "Wyoming Server for Qwen3-TTS (MLX)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"}
]
keywords = ["rhasspy", "wyoming", "qwen", "tts", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming>=1.8,<2",
    "regex>=2024.11.6",
    "mlx-audio>=0.3.1",
    "mlx>=0.30.6",
    "numpy>=1.20,<2",
    "sentence-stream>=1.2.0,<2",
]

[project.urls]
Homepage = "http://github.com/rhasspy/wyoming-qwen"

[project.scripts]
wyoming-qwen = "wyoming_qwen.__main__:run"

[tool.setuptools.packages.find]
include = ["wyoming_qwen"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
wyoming_qwen = ["speakers.json"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "build",
    "scipy>=1.10,<2",
    "python-speech-features>=0.6,<1",
]
zeroconf = [
    "wyoming[zeroconf]",
]
